// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget wrapper component should render a widget wrapper with a chart 1`] = `
<div>
  <div
    class="card-pf card-pf-view"
  >
    <div
      class="card-pf-body"
    >
      <div
        class="card-pf-heading-kebab"
      >
        <span
          class="cds--overflow-menu__wrapper"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-labelledby="widget-title-1"
                class="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                id="1-menu"
                type="button"
              >
                <svg
                  aria-label="Options"
                  class="cds--overflow-menu__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="16"
                    cy="8"
                    r="2"
                  />
                  <circle
                    cx="16"
                    cy="16"
                    r="2"
                  />
                  <circle
                    cx="16"
                    cy="24"
                    r="2"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-8"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Options
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </span>
        <div
          class="card-pf-title sortable-handle ui-sortable-handle"
        >
          <span
            id="widget-title-1"
          >
            Guest OS Information
          </span>
        </div>
      </div>
    </div>
    <div
      id="dd_w1_box"
    >
      <div
        class="loadingSpinner"
      >
        <div
          aria-atomic="true"
          aria-live="assertive"
          class="export-spinner cds--loading cds--loading--small"
        >
          <svg
            aria-label="loading"
            class="cds--loading__svg"
            role="img"
            viewBox="0 0 100 100"
          >
            <title>
              loading
            </title>
            <circle
              class="cds--loading__background"
              cx="50%"
              cy="50%"
              r="42"
            />
            <circle
              class="cds--loading__stroke"
              cx="50%"
              cy="50%"
              r="42"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Widget wrapper component should render a widget wrapper with a menu 1`] = `
<div>
  <div
    class="card-pf card-pf-view"
  >
    <div
      class="card-pf-body"
    >
      <div
        class="card-pf-heading-kebab"
      >
        <span
          class="cds--overflow-menu__wrapper"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-labelledby="widget-title-83"
                class="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                id="83-menu"
                type="button"
              >
                <svg
                  aria-label="Options"
                  class="cds--overflow-menu__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="16"
                    cy="8"
                    r="2"
                  />
                  <circle
                    cx="16"
                    cy="16"
                    r="2"
                  />
                  <circle
                    cx="16"
                    cy="24"
                    r="2"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-5"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Options
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </span>
        <div
          class="card-pf-title sortable-handle ui-sortable-handle"
        >
          <span
            id="widget-title-83"
          >
            Links
          </span>
        </div>
      </div>
    </div>
    <div
      id="dd_w83_box"
    >
      <div
        class="loadingSpinner"
      >
        <div
          aria-atomic="true"
          aria-live="assertive"
          class="export-spinner cds--loading cds--loading--small"
        >
          <svg
            aria-label="loading"
            class="cds--loading__svg"
            role="img"
            viewBox="0 0 100 100"
          >
            <title>
              loading
            </title>
            <circle
              class="cds--loading__background"
              cx="50%"
              cy="50%"
              r="42"
            />
            <circle
              class="cds--loading__stroke"
              cx="50%"
              cy="50%"
              r="42"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Widget wrapper component should render a widget wrapper with a report 1`] = `
<div>
  <div
    class="card-pf card-pf-view"
  >
    <div
      class="card-pf-body"
    >
      <div
        class="card-pf-heading-kebab"
      >
        <span
          class="cds--overflow-menu__wrapper"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-labelledby="widget-title-19"
                class="widget-overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                id="19-menu"
                type="button"
              >
                <svg
                  aria-label="Options"
                  class="cds--overflow-menu__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="16"
                    cy="8"
                    r="2"
                  />
                  <circle
                    cx="16"
                    cy="16"
                    r="2"
                  />
                  <circle
                    cx="16"
                    cy="24"
                    r="2"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-2"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Options
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </span>
        <div
          class="card-pf-title sortable-handle ui-sortable-handle"
        >
          <span
            id="widget-title-19"
          >
            EVM: Recently Discovered Hosts
          </span>
        </div>
      </div>
    </div>
    <div
      id="dd_w19_box"
    >
      <div
        class="loadingSpinner"
      >
        <div
          aria-atomic="true"
          aria-live="assertive"
          class="export-spinner cds--loading cds--loading--small"
        >
          <svg
            aria-label="loading"
            class="cds--loading__svg"
            role="img"
            viewBox="0 0 100 100"
          >
            <title>
              loading
            </title>
            <circle
              class="cds--loading__background"
              cx="50%"
              cy="50%"
              r="42"
            />
            <circle
              class="cds--loading__stroke"
              cx="50%"
              cy="50%"
              r="42"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
